--- a/templates/index.html
+++ b/templates/index.html
@@ -160,26 +160,26 @@
                     <p class="description">Terima Kasih atas pelayanannya.</p>
                 </div>
                 <div class="author"><img class="rounded-circle" src="/static/img/testi-1.jpeg">
-                    <h5 class="name">Lik Kardi</h5>
-                    <p class="title">KUA Mirit.</p>
+                    <h5 class="name">Slamet Riyadi</h5>
+                    <p class="title">KUA Mirit</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 item">
                 <div class="box rounded">
-                    <p class="description">Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id.</p>
+                    <p class="description">Pelayanannya baik, ramah, dan sangat tanggap.</p>
                 </div>
                 <div class="author"><img class="rounded-circle" src="/static/img/testi-2.jpeg">
-                    <h5 class="name">Patuhan</h5>
-                    <p class="title">KUA Giwangan.</p>
+                    <h5 class="name">Joko Suseno</h5>
+                    <p class="title">KUA Kutowinangun</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 item">
                 <div class="box rounded">
-                    <p class="description">Aliquam varius finibus est, et interdum justo suscipit. Vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p>
+                    <p class="description">Harga sangat terjangkau dan pelayanan sangat memuaskan.</p>
                 </div>
-                <div class="author"><img class="rounded-circle" src="/static/img/testi-3.jpeg">
-                    <h5 class="name">Siti</h5>
-                    <p class="title">KUA Bikini Bottom.</p>
+                <div class="author"><img class="rounded-circle" src="/static/img/testi-3.jpg">
+                    <h5 class="name">Siti Hasanah</h5>
+                    <p class="title">KUA Puring</p>
                 </div>
             </div>
         </div>
