--- a/templates/contact.html
+++ b/templates/contact.html
@@ -160,8 +160,8 @@
         <img src="/static/img/GA-1.jpg" alt="Los Angeles" class="d-block c-img" style="width:100%; text-align: center;">
         <div class="container-carousel-caption">
           <div class="carousel-caption">
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3>Galeri CV Diva Printer</h3>
+            <p>Halaman Depan CV Diva Printer</p>
           </div>
         </div>
       </div>
@@ -169,8 +169,8 @@
         <img src="/static/img/GA-2.jpg" alt="Los Angeles" class="d-block c-img" style="width:100%; text-align: center;">
         <div class="container-carousel-caption">
           <div class="carousel-caption">
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3>Galeri CV Diva Printer</h3>
+            <p>Pintu Masuk CV Diva Printer</p>
           </div>
         </div>
       </div>
@@ -178,8 +178,8 @@
         <img src="/static/img/GA-3.jpg" alt="Los Angeles" class="d-block c-img" style="width:100%; text-align: center;">
         <div class="container-carousel-caption">
           <div class="carousel-caption">
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3>Galeri CV Diva Printer</h3>
+            <p>Penjualan Aksesoris Komputer dan Laptop</p>
           </div>
         </div>
       </div>
@@ -187,8 +187,8 @@
         <img src="/static/img/GA-4.jpg" alt="Los Angeles" class="d-block c-img" style="width:100%; text-align: center;">
         <div class="container-carousel-caption">
           <div class="carousel-caption">
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3>Galeri CV Diva Printer</h3>
+            <p>Penjualan Printer dan Scanner</p>
           </div>
         </div>
       </div>
@@ -196,8 +196,8 @@
         <img src="/static/img/GA-5.jpg" alt="Los Angeles" class="d-block c-img" style="width:100%; text-align: center;">
         <div class="container-carousel-caption">
           <div class="carousel-caption">
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3>Galeri CV Diva Printer</h3>
+            <p>Penjualan Tinta Printer</p>
           </div>
         </div>
       </div>
@@ -205,8 +205,8 @@
         <img src="/static/img/GA-6.jpg" alt="Los Angeles" class="d-block c-img" style="width:100%; text-align: center;">
         <div class="container-carousel-caption">
           <div class="carousel-caption">
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3>Galeri CV Diva Printer</h3>
+            <p>Salah satu produk yang dijual CV Diva Printer</p>
           </div>
         </div>
       </div>
@@ -214,8 +214,8 @@
         <img src="/static/img/GA-7.jpg" alt="Los Angeles" class="d-block c-img" style="width:100%; text-align: center;">
         <div class="container-carousel-caption">
           <div class="carousel-caption">
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3>Galeri CV Diva Printer</h3>
+            <p>Kasir CV Diva Printer</p>
           </div>
         </div>
       </div>
@@ -223,8 +223,8 @@
         <img src="/static/img/GA-8.jpg" alt="Los Angeles" class="d-block c-img" style="width:100%; text-align: center;">
         <div class="container-carousel-caption">
           <div class="carousel-caption">
-            <h3>Los Angeles</h3>
-            <p>We had such a great time in LA!</p>
+            <h3>Galeri CV Diva Printer</h3>
+            <p>Penjualan Printer dan Scanner</p>
           </div>
         </div>
       </div>
